//
syntax = "proto3";

package service.goms;   //和 service 一起组成服务名称

option go_package = "api";   //生成的 go 包的包名

service User{
    rpc Ping(Request)returns(Reply){};

    rpc CreateUser(UserT)returns(UidT){};
    rpc ReadUser(UidT)returns(UserT){};
    rpc UpdateUser(UserT)returns(Empty){};
    rpc DeleteUser(UidT)returns(Empty){};
}

message Request {
    string message = 1;
}

message Reply {
    string message = 1;
    sint64 count = 2;
}

message Empty {}

message UserT{
    sint64  uid = 1;
    string name = 2;
    sint64  sex = 3;
}

message UidT{
    sint64 uid = 1;
}

